# capstone_s2_ws

./: .gitignore  README.md  flow_chart.md
src/all_in_one_package/launch/: all_in_one_launch.py  generate_map.launch.py
src/amr/: CMakeLists.txt
src/amr/description/: amr_description.urdf
src/amr_cartographer/src/: empty.cpp
src/amr_msgs/: CMakeLists.txt  package.xml
src/amr_msgs/msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3DArray.msg  LaneInfo.msg  Mask.msg  Pose2D.msg
src/amr_navigator/: package.xml  setup.py
src/amr_navigator/amr_navigator/: floor_map_switcher.py  navigator_main.py  x_yaml_waypoint_follower.py
src/amr_navigator/launch/: navigator_main.launch.py  yaml_waypoint_follower.launch.py
src/camera_perception_pkg/: package.xml  setup.py
src/camera_perception_pkg/camera_perception_pkg/: object_distance_node.py  yolov8_debug_node.py  yolov8_node.py
src/manipulator/: CMakeLists.txt  package.xml
src/manipulator/launch/: capstone_arm_display.launch.py
src/manipulator/rviz/: manipulator.rviz
src/manipulator_manager/: package.xml  setup.cfg  setup.py
src/manipulator_manager/launch/: marker_command_manager.launch.py
src/manipulator_manager/manipulator_manager/: marker_command_manager.py
src/manipulator_moveit/: CMakeLists.txt  package.xml
src/manipulator_moveit/config/: joint_limits.yaml  manipulator.ros2_control.xacro  manipulator.srdf  manipulator.urdf.xacro  moveit_controllers.yaml
src/manipulator_moveit/launch/: move_group.launch.py  moveit_core.launch.py
src/ros2_laser_scan_merger/config/: params.yaml
src/serial_test/serial_test/: manipulator_driver.py  motor_driver.py  odom_main.py  test_node_main.py
src/sllidar_ros2/launch/: sllidar_c1_2_launch.py
src/sllidar_ros2/scripts/: create_udev_rules.sh  delete_udev_rules.sh  (+1 more)
(+7 files in other folders)
